rewrite menu-ui and form-ui to semantic-react

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,6 +4,7 @@
 		<title>Trading club</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
+		<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css" />
 		<link href="/client/public/css/main.css" rel="stylesheet" type="text/css">
 	</head>
 
